--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
-    "strict": true
+    "strict": true,
+    "lib": ["es2020", "dom"]
   },
   "exclude": ["node_modules"]
 }
