--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "strict": true,
-    "lib": ["es2020", "dom"]
+    "lib": ["es2020", "DOM"]
   },
   "exclude": ["node_modules"]
 }
