#6. 기타 나머지(decorator, utility 포함)

--- a/type_basic/tsconfig.json
+++ b/type_basic/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "strict": true,
-    "lib": ["es2020", "DOM"]
+    "lib": ["es6", "es2020", "DOM"],
+    "experimentalDecorators": true
   },
   "exclude": ["node_modules"]
 }
