--- a/type_basic/tsconfig.json
+++ b/type_basic/tsconfig.json
@@ -6,7 +6,8 @@
     "noImplicitReturns": true,
     "strict": true,
     "lib": ["es6", "es2020", "DOM"],
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "typeRoots": ["./can-use-dom.ts", "node-modules"]
   },
   "exclude": ["node_modules"]
 }
